# Fed-SINGA

./: .gitignore  .pre-commit-config.yaml  README.md  contributing.md  docker-compose.client_1.yml  docker-compose.client_2.yml  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  run.sh
.github/: CONTRIBUTING.md
scripts/: compose_setup.py  docker-compose.client_1.yml  docker-compose.client_10.yml  docker-compose.client_3.yml  docker-compose.train_10.yml
src/: dockerfile
src/client/: aggregate.py  app.py  client.py  dockerfile  main.py  mycnn.py  run.sh  train.py
src/client/data/: bank.py  cifar10.py  download_cifar10.py  download_cifar100.py  download_mnist.py  generate_mnist_data.py  mnist.py
src/client/model/: alexnet.py  cnn.py  resnet.py  xceptionnet.py
src/data/: download_mnist.py  generate_mnist_data.py
src/proto/: interface.proto  interface_pb2.py  utils.py
src/server/: app.py  dockerfile  main.py  server.py
tests/helpers/: conftest.py  run_command.py  start_app.py
tests/smoke/: test_communicatoin.py  test_secure.py
tests/unit/: test_client.py  test_server_client.py  test_util.py
